--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "koa": "^2.4.1",
     "koa-bodyparser": "^4.2.0",
     "koa-logger": "^3.1.0",
+    "koa-router": "^7.2.1",
     "koa-static": "^4.0.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0"
