add mongoose driver

--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "yarn run lint && nodemon src/main.js",
+    "start": "yarn run lint && node src/main.js",
+    "dev": "nodemon --exec yarn run start",
     "lint": "eslint . --fix --cache"
   },
   "dependencies": {
@@ -12,12 +13,13 @@
     "koa": "^2.4.1",
     "koa-bodyparser": "^4.2.0",
     "koa-logger": "^3.1.0",
-    "koa-router": "^7.2.1"
+    "koa-router": "^7.2.1",
+    "mongoose": "^4.13.1"
   },
   "devDependencies": {
     "eslint": "^4.10.0",
-    "eslint-plugin-import": "2.7.0",
     "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "2.7.0",
     "nodemon": "^1.12.1"
   }
 }
