--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,8 @@
     "koa-bodyparser": "^4.2.0",
     "koa-logger": "^3.1.0",
     "koa-router": "^7.2.1",
-    "mongoose": "^4.13.1"
+    "mongoose": "^4.13.1",
+    "shortid": "^2.2.8"
   },
   "devDependencies": {
     "eslint": "^4.10.0",
