--- a/client/.babelrc
+++ b/client/.babelrc
@@ -1,10 +1,12 @@
 {
   "presets": [
-    ["env", {"modules": false}],
+    "env",
+    "es2015",
     "stage-1",
     "react"
   ],
   "plugins": [
-    "transform-runtime"
+    "transform-runtime",
+    "transform-export-default"
   ]
 }
