--- a/client/package.json
+++ b/client/package.json
@@ -10,19 +10,28 @@
   },
   "dependencies": {
     "koa": "2.4.1",
-    "react": "16.0.0",
-    "react-dom": "16.0.0",
-    "koa-static": "4.0.1"
+    "koa-static": "4.0.1",
+    "lodash": "^4.17.4",
+    "prop-types": "^15.6.0",
+    "react": "^16.1.0",
+    "react-dom": "^16.1.0",
+    "url": "^0.11.0",
+    "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
     "babel-core": "6.26.0",
     "babel-loader": "7.1.2",
+    "babel-plugin-transform-export-default": "^7.0.0-alpha.20",
     "babel-plugin-transform-runtime": "6.23.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "1.6.1",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "6.24.1",
     "babel-preset-stage-1": "6.24.1",
+    "babel-runtime": "^6.26.0",
     "koa-webpack-dev-middleware": "2.0.2",
     "koa-webpack-hot-middleware": "1.0.3",
+    "object-assign": "^4.1.1",
     "webpack": "3.8.1"
   }
 }
