--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "koa": "2.4.1",
     "koa-static": "4.0.1",
     "lodash": "^4.17.4",
+    "node-sass": "^4.6.0",
     "prop-types": "^15.6.0",
     "react": "^16.1.0",
     "react-dom": "^16.1.0",
@@ -29,9 +30,14 @@
     "babel-preset-react": "6.24.1",
     "babel-preset-stage-1": "6.24.1",
     "babel-runtime": "^6.26.0",
+    "css-loader": "^0.28.7",
+    "file-loader": "^1.1.5",
     "koa-webpack-dev-middleware": "2.0.2",
     "koa-webpack-hot-middleware": "1.0.3",
     "object-assign": "^4.1.1",
+    "open-browser-webpack-plugin": "^0.0.5",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.19.0",
     "webpack": "3.8.1"
   }
 }
