--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "prop-types": "^15.6.0",
     "react": "^16.1.0",
     "react-dom": "^16.1.0",
+    "react-table": "^6.7.4",
     "url": "^0.11.0",
     "whatwg-fetch": "^2.0.3"
   },
