--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,9 @@
     "prop-types": "^15.6.0",
     "react": "^16.1.0",
     "react-dom": "^16.1.0",
+    "react-redux": "^5.0.6",
     "react-table": "^6.7.4",
+    "redux": "^3.7.2",
     "url": "^0.11.0",
     "whatwg-fetch": "^2.0.3"
   },
