--- a/client/package.json
+++ b/client/package.json
@@ -17,15 +17,14 @@
     "react": "^16.1.0",
     "react-dom": "^16.1.0",
     "react-redux": "^5.0.6",
-    "react-table": "^6.7.4",
     "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
     "url": "^0.11.0",
     "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
     "babel-core": "6.26.0",
     "babel-loader": "7.1.2",
-    "babel-plugin-transform-export-default": "^7.0.0-alpha.20",
     "babel-plugin-transform-runtime": "6.23.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "1.6.1",
@@ -37,7 +36,6 @@
     "file-loader": "^1.1.5",
     "koa-webpack-dev-middleware": "2.0.2",
     "koa-webpack-hot-middleware": "1.0.3",
-    "object-assign": "^4.1.1",
     "open-browser-webpack-plugin": "^0.0.5",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
