--- a/client/package.json
+++ b/client/package.json
@@ -10,13 +10,14 @@
   },
   "dependencies": {
     "koa": "2.4.1",
-    "koa-static": "4.0.1",
+    "koa-send": "^4.1.1",
     "lodash": "^4.17.4",
     "node-sass": "^4.6.0",
     "prop-types": "^15.6.0",
     "react": "^16.1.0",
     "react-dom": "^16.1.0",
     "react-redux": "^5.0.6",
+    "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "url": "^0.11.0",
