--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,11 @@
   "author": "Vlad Komodey",
   "license": "MIT",
   "scripts": {
-    "dev": "node index.js"
+    "start": "node index.js",
+    "dev": "node index.js",
+    "build": "webpack",
+    "deploy": "cd ../ && git subtree push --prefix client/ web master",
+    "heroky-prebuild": "rm -rf node_modules"
   },
   "dependencies": {
     "koa": "2.4.1",
@@ -21,9 +25,7 @@
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "url": "^0.11.0",
-    "whatwg-fetch": "^2.0.3"
-  },
-  "devDependencies": {
+    "whatwg-fetch": "^2.0.3",
     "babel-core": "6.26.0",
     "babel-loader": "7.1.2",
     "babel-plugin-transform-runtime": "6.23.0",
