--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,15 @@
     "heroky-prebuild": "rm -rf node_modules"
   },
   "dependencies": {
+    "babel-core": "6.26.0",
+    "babel-loader": "7.1.2",
+    "babel-plugin-transform-runtime": "6.23.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "1.6.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "6.24.1",
+    "babel-preset-stage-1": "6.24.1",
+    "babel-runtime": "^6.26.0",
     "koa": "2.4.1",
     "koa-send": "^4.1.1",
     "lodash": "^4.17.4",
@@ -26,21 +35,14 @@
     "redux-thunk": "^2.2.0",
     "url": "^0.11.0",
     "whatwg-fetch": "^2.0.3",
-    "babel-core": "6.26.0",
-    "babel-loader": "7.1.2",
-    "babel-plugin-transform-runtime": "6.23.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "1.6.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "6.24.1",
-    "babel-preset-stage-1": "6.24.1",
-    "babel-runtime": "^6.26.0",
-    "css-loader": "^0.28.7",
     "file-loader": "^1.1.5",
-    "koa-webpack-dev-middleware": "2.0.2",
-    "koa-webpack-hot-middleware": "1.0.3",
+    "css-loader": "^0.28.7",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
     "webpack": "3.8.1"
+  },
+  "devDependencies": {
+    "koa-webpack-dev-middleware": "2.0.2",
+    "koa-webpack-hot-middleware": "1.0.3"
   }
 }
