--- a/client/package.json
+++ b/client/package.json
@@ -22,7 +22,10 @@
     "babel-preset-react": "6.24.1",
     "babel-preset-stage-1": "6.24.1",
     "babel-runtime": "^6.26.0",
+    "css-loader": "^0.28.7",
+    "file-loader": "^1.1.5",
     "koa": "2.4.1",
+    "koa-ejs": "^4.1.0",
     "koa-send": "^4.1.1",
     "lodash": "^4.17.4",
     "node-sass": "^4.6.0",
@@ -33,13 +36,11 @@
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
-    "url": "^0.11.0",
-    "whatwg-fetch": "^2.0.3",
-    "file-loader": "^1.1.5",
-    "css-loader": "^0.28.7",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
-    "webpack": "3.8.1"
+    "url": "^0.11.0",
+    "webpack": "3.8.1",
+    "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
     "koa-webpack-dev-middleware": "2.0.2",
