Pass mongo url through env variable

--- a/server/package.json
+++ b/server/package.json
@@ -4,11 +4,10 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "yarn run lint && node src/main.js",
-    "dev": "nodemon --exec yarn run start",
+    "start": "node src/main.js",
+    "dev": "nodemon --exec 'yarn run lint && node src/main.js'",
     "lint": "eslint . --fix --cache"
   },
-  { "engines" : { "node" : "=8.9.0" } },
   "dependencies": {
     "app-module-path": "^2.2.0",
     "koa": "^2.4.1",
