--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     entrypoint:
       /bin/true
     volumes:
-      - /data/mongodb:/data/db/
+      - /data/mongodb-temporary:/data/db/
 
   mongodb:
     image: mongo
@@ -25,8 +25,6 @@ services:
       - 3000:3000
     environment:
       - MONGODB_URL=mongodb://mongodb:27017/dictionary
-    links:
-     - mongodb
     volumes:
       - ./server:/usr/src/app
   client:
