--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "scripts": {
     "start": "node index.js",
-    "dev": "node index.js",
+    "dev": "NODE_ENV=development node index.js",
     "build": "webpack",
     "deploy": "cd ../ && git subtree push --prefix client/ web master",
     "heroky-prebuild": "rm -rf node_modules"
@@ -43,6 +43,14 @@
     "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
+    "babel-eslint": "^8.2.1",
+    "eslint": "^4.17.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-import-resolver-webpack": "^0.8.4",
+    "eslint-loader": "^1.9.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.6.1",
     "koa-webpack-dev-middleware": "2.0.2",
     "koa-webpack-hot-middleware": "1.0.3"
   }
