--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "koa-logger": "^3.1.0",
     "koa-router": "^7.2.1",
     "koa2-cors": "^2.0.5",
+    "lodash": "^4.17.5",
     "mongoose": "^4.13.1",
     "shortid": "^2.2.8"
   },
