--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,8 @@
     "node-sass": "^4.6.0",
     "prop-types": "^15.6.0",
     "react": "^16.1.0",
+    "react-dnd": "^2.5.4",
+    "react-dnd-html5-backend": "^2.5.4",
     "react-dom": "^16.1.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
