--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "lodash": "^4.17.4",
     "node-sass": "^4.6.0",
     "prop-types": "^15.6.0",
+    "query-string": "^6.2.0",
     "react": "^16.1.0",
     "react-dom": "^16.1.0",
     "react-redux": "^5.0.6",
