--- a/client/.babelrc
+++ b/client/.babelrc
@@ -7,6 +7,7 @@
   ],
   "plugins": [
     "transform-runtime",
-    "transform-decorators-legacy"
+    "transform-decorators-legacy",
+    "transform-object-rest-spread"
   ]
 }
