--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,7 @@
     "query-string": "^6.2.0",
     "react": "^16.1.0",
     "react-dom": "^16.1.0",
+    "react-notifications": "^1.4.3",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
