--- a/client/package.json
+++ b/client/package.json
@@ -39,6 +39,7 @@
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
+    "resolve-url-loader": "^3.0.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
     "url": "^0.11.0",
