--- a/client/package.json
+++ b/client/package.json
@@ -14,18 +14,18 @@
   },
   "dependencies": {
     "babel-core": "6.26.0",
+    "babel-eslint": "^8.2.1",
     "babel-loader": "7.1.2",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-runtime": "6.23.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "1.6.1",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-es2017": "^6.24.1",
     "babel-preset-react": "6.24.1",
     "babel-preset-stage-1": "6.24.1",
     "babel-runtime": "^6.26.0",
-    "babel-eslint": "^8.2.1",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-es2017": "^6.24.1",
     "classnames": "^2.2.5",
     "css-loader": "^0.28.7",
     "file-loader": "^1.1.5",
@@ -38,6 +38,7 @@
     "query-string": "^6.2.0",
     "react": "^16.1.0",
     "react-dom": "^16.1.0",
+    "react-modal": "^3.6.1",
     "react-notifications": "^1.4.3",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
@@ -56,7 +57,7 @@
     "eslint-import-resolver-webpack": "^0.8.4",
     "eslint-loader": "^1.9.0",
     "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-jsx-a11y": "6.1.2",
     "eslint-plugin-react": "^7.6.1",
     "koa-webpack-dev-middleware": "2.0.2",
     "koa-webpack-hot-middleware": "1.0.3"
