Add missed /data/letsencrypt into the nginx docker-compose configuration

--- a/devops/letsencrypt-docker-nginx/src/production/docker-compose.yml
+++ b/devops/letsencrypt-docker-nginx/src/production/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       - ./dh-param/dhparam-2048.pem:/etc/ssl/certs/dhparam-2048.pem
       - /docker-volumes/etc/letsencrypt/live/dictify-pro.com/fullchain.pem:/etc/letsencrypt/live/dictify-pro.com/fullchain.pem
       - /docker-volumes/etc/letsencrypt/live/dictify-pro.com/privkey.pem:/etc/letsencrypt/live/dictify-pro.com/privkey.pem
+      - /docker-volumes/data/letsencrypt:/data/letsencrypt
 
 networks:
   default:
