--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,9 +23,10 @@ services:
     ports:
       - 3000:3000
     environment:
-      - MONGODB_URL=mongodb://mongodb:27017/dictionary
+      - MONGODB_URL=mongodb://mongodb:27017/dictify
     volumes:
       - ./server:/usr/src/app
+
   client:
     build:
       context: ./
