--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,8 @@
     "koa-router": "^7.2.1",
     "koa2-cors": "^2.0.5",
     "lodash": "^4.17.5",
-    "mongoose": "^4.13.1"
+    "mongoose": "^4.13.1",
+    "shortid": "^2.2.14"
   },
   "devDependencies": {
     "eslint": "^4.10.0",
